# estrutura_workshop

./: .gitignore  README.md  pyproject.toml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
tests/: test_pipeline.py
